Fix spacing between tiles.

--- a/app/assets/stylesheets/tables.scss
+++ b/app/assets/stylesheets/tables.scss
@@ -472,6 +472,7 @@ button:before {
   display: inline-block;
   width: 100%;
   height: 100%;
+  margin: 0 20px 0 0;
   position: relative;
   overflow: visible;
   white-space: normal;
